benchmarks/mybenchmarks/websites/linux/code/aoc2021_day12b.2.hs.log

Thu, 23 Dec 2021 01:41:36 GMT

MAKE:
ghc -O2 aoc2021_day12b.hs-2.hs -o app_hs
[1 of 1] Compiling Main             ( aoc2021_day12b.hs-2.hs, aoc2021_day12b.hs-2.o )

aoc2021_day12b.hs-2.hs:136:40: error:
    Not in scope: `D.fromList'
    Perhaps you meant one of these:
      `S.fromList' (imported from Data.Set),
      `S.fromList' (imported from Data.Set),
      `M.fromList' (imported from Data.Map.Strict)
    No module named `D' is imported.
    |
136 | bfsOn repr next starts = loop S.empty (D.fromList starts)
    |                                        ^^^^^^^^^^

aoc2021_day12b.hs-2.hs:138:12: error:
    Not in scope: data constructor `D.Empty'
    Perhaps you meant one of these:
      variable `S.empty' (imported from Data.Set),
      variable `S.empty' (imported from Data.Set),
      variable `M.empty' (imported from Data.Map.Strict)
    No module named `D' is imported.
    |
138 |     loop _ D.Empty = []
    |            ^^^^^^^

aoc2021_day12b.hs-2.hs:139:18: error:
    Not in scope: data constructor `D.:<|'
    No module named `D' is imported.
    |
139 |     loop seen (x D.:<| xs)
    |                  ^^^^^

aoc2021_day12b.hs-2.hs:141:45: error:
    Not in scope: `D.appendList'
    No module named `D' is imported.
    |
141 |       | otherwise         = x : loop seen' (D.appendList nexts xs)
    |                                             ^^^^^^^^^^^^

aoc2021_day12b.hs-2.hs:150:44: error:
    Not in scope: `D.fromList'
    Perhaps you meant one of these:
      `S.fromList' (imported from Data.Set),
      `S.fromList' (imported from Data.Set),
      `M.fromList' (imported from Data.Map.Strict)
    No module named `D' is imported.
    |
150 | bfsOnInt repr next starts = loop IS.empty (D.fromList starts)
    |                                            ^^^^^^^^^^

aoc2021_day12b.hs-2.hs:152:12: error:
    Not in scope: data constructor `D.Empty'
    Perhaps you meant one of these:
      variable `S.empty' (imported from Data.Set),
      variable `S.empty' (imported from Data.Set),
      variable `M.empty' (imported from Data.Map.Strict)
    No module named `D' is imported.
    |
152 |     loop _ D.Empty = []
    |            ^^^^^^^

aoc2021_day12b.hs-2.hs:153:18: error:
    Not in scope: data constructor `D.:<|'
    No module named `D' is imported.
    |
153 |     loop seen (x D.:<| xs)
    |                  ^^^^^

aoc2021_day12b.hs-2.hs:155:46: error:
    Not in scope: `D.appendList'
    No module named `D' is imported.
    |
155 |       | otherwise          = x : loop seen' (D.appendList nexts xs)
    |                                              ^^^^^^^^^^^^

aoc2021_day12b.hs-2.hs:167:41: error:
    Not in scope: `PQ.singleton'
    Perhaps you meant one of these:
      `S.singleton' (imported from Data.Set),
      `S.singleton' (imported from Data.Set),
      `IM.singleton' (imported from Data.IntMap.Strict)
    No module named `PQ' is imported.
    |
167 | astarOn repr next start = loop S.empty (PQ.singleton 0 (0,start))
    |                                         ^^^^^^^^^^^^

aoc2021_day12b.hs-2.hs:169:15: error:
    Not in scope: data constructor `PQ.Empty'
    No module named `PQ' is imported.
    |
169 |     loop _    PQ.Empty               = []
    |               ^^^^^^^^

aoc2021_day12b.hs-2.hs:170:25: error:
    Not in scope: data constructor `PQ.:<|'
    No module named `PQ' is imported.
    |
170 |     loop seen ((cost,x) PQ.:<| rest)
    |                         ^^^^^^

aoc2021_day12b.hs-2.hs:176:40: error:
    Not in scope: `PQ.insert'
    Perhaps you meant one of these:
      `S.insert' (imported from Data.Set),
      `S.insert' (imported from Data.Set),
      `IM.insert' (imported from Data.IntMap.Strict)
    No module named `PQ' is imported.
    |
176 |         rest' = DF.foldl' (\q (p,v) -> PQ.insert p v q) rest nexts
    |                                        ^^^^^^^^^

aoc2021_day12b.hs-2.hs:252:1: error:
    Multiple declarations of `Empty'
    Declared at: aoc2021_day12b.hs-2.hs:186:1
                 aoc2021_day12b.hs-2.hs:252:1
    |
252 | pattern Empty <- (Advent.PQueue.null -> True)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

aoc2021_day12b.hs-2.hs:252:19: error:
    Not in scope: `Advent.PQueue.null'
    No module named `Advent.PQueue' is imported.
    |
252 | pattern Empty <- (Advent.PQueue.null -> True)
    |                   ^^^^^^^^^^^^^^^^^^

aoc2021_day12b.hs-2.hs:256:9: error:
    Duplicate pattern synonym signatures for `:<|'
    at aoc2021_day12b.hs-2.hs:190:9-13
       aoc2021_day12b.hs-2.hs:256:9-13
    |
256 | pattern (:<|) :: a -> PQueue a -> PQueue a
    |         ^^^^^

aoc2021_day12b.hs-2.hs:257:1: error:
    Multiple declarations of `:<|'
    Declared at: aoc2021_day12b.hs-2.hs:191:1
                 aoc2021_day12b.hs-2.hs:257:1
    |
257 | pattern v :<| q <- (view -> Just (v,q))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

aoc2021_day12b.hs-2.hs:265:1: error:
    Duplicate type signatures for `singleton'
    at aoc2021_day12b.hs-2.hs:237:1-9
       aoc2021_day12b.hs-2.hs:265:1-9
    |
265 | singleton :: Int -> a -> PQueue a
    | ^^^^^^^^^

aoc2021_day12b.hs-2.hs:266:1: error:
    Multiple declarations of `singleton'
    Declared at: aoc2021_day12b.hs-2.hs:238:1
                 aoc2021_day12b.hs-2.hs:266:1
    |
266 | singleton p v = PQ (IM.singleton p [v])
    | ^^^^^^^^^

aoc2021_day12b.hs-2.hs:268:1: error:
    Duplicate type signatures for `fromList'
    at aoc2021_day12b.hs-2.hs:240:1-8
       aoc2021_day12b.hs-2.hs:268:1-8
    |
268 | fromList :: [(Int,a)] -> PQueue a
    | ^^^^^^^^

aoc2021_day12b.hs-2.hs:269:1: error:
    Multiple declarations of `fromList'
    Declared at: aoc2021_day12b.hs-2.hs:241:1
                 aoc2021_day12b.hs-2.hs:269:1
    |
269 | fromList xs = PQ $
    | ^^^^^^^^
make: [/benchmarks/bencher/makefiles/my.linux.Makefile:66: aoc2021_day12b.hs-2.hs_run] Error 1 (ignored)

0.32s to complete and log all make actions

COMMAND LINE:
./app_hs 0 < aoc2021_day12b-input1.txt

MAKE ERROR 

